welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: not found: value getmondeHauteur
  var tab = new Array[Color](getmondeHauteur())
                             ^Array1:14: error: not found: value getmondeHauteur
  recule(getmondeHauteur()-1)
         ^Array1:15: error: not found: value getmondeLargeur
  for(i<- 1 to getmondeLargeur()-1){
               ^Array1:20: error: not found: value getmondeHauteur
    for(j<-0 to getmondeHauteur()-1){
                ^